# etcm

./: .gitignore  README.md  pyproject.toml
docs/: cli.md  install.md  manifest.md  product_spec.md  roadmap.md
docs/stage1/: README.md  architecture-decisions.md  implementation-handoff.md  parser-decision-hardening.md  parser-spike.md  pydantic-spike.md  sources.md  test-strategy.md  tooling-decisions.md
docs/stage2/: README.md  api-contract.md  fixture-contract.md  implementation-handoff.md  ir-contract.md  module-boundaries.md  reasoning.md  references.md  scaffold-plan.md  scope.md
docs/stage3/: README.md  diagnostic-contract.md  fixture-matrix.md  golden-format.md  implementation-handoff.md  parser-gates.md  reasoning.md  references.md  scope.md
docs/stage4/: README.md  diagnostics.md  implementation-handoff.md  parser-contract.md
docs/stage5/: README.md  diagnostics.md  fixture-matrix.md  graph-contract.md  implementation-handoff.md  reasoning.md  resolver-contract.md
docs/stage6/: README.md  api-contract.md  diagnostics.md  fixture-matrix.md  generated-views.md  implementation-handoff.md  validation-contract.md
docs/stage7/: README.md  cli-contract.md  fixture-matrix.md  implementation-handoff.md  serialization.md
examples/ml/: model.etcm  runtime.etcm  train.etcm
src/etcm/: __init__.py  errors.py
src/etcm/cli/: __init__.py  __main__.py
src/etcm/codegen/: __init__.py
src/etcm/ir/: __init__.py  nodes.py
src/etcm/resolve/: __init__.py  graph.py
src/etcm/syntax/: __init__.py  ast.py  grammar.lark  parser.py
tests/: test_cli.py  test_codegen_views.py  test_examples.py  test_fixture_contract.py  test_imports.py  test_ir_contracts.py  test_package_metadata.py  test_parser_core.py  test_public_api_placeholders.py  test_resolver_core.py
tests/fixtures/golden/: README.md
tests/fixtures/golden/ast/: comments_blank_lines.json  impl_inheritance.json  inline_spec.json  inline_spec_with_defaults.json  nested_literals.json  no_impl.json  spec_inheritance.json  spec_ref_impls.json
tests/fixtures/golden/diagnostics/: bad_indent.json  duplicate_field.json  duplicate_impl.json  duplicate_spec.json  (+7 more)
tests/fixtures/invalid/: bad_indent.etcm  constraint_bound.etcm  constraint_choice.etcm  constraint_length.etcm  constraint_malformed.etcm  constraint_regex.etcm  denied_override.etcm  duplicate_field.etcm  duplicate_impl.etcm  duplicate_spec.etcm  impl_cycle.etcm  invalid_path_kind.etcm  malformed_literal.etcm  malformed_syntax.etcm  missing_path_must_exist.etcm  missing_required.etcm  missing_selector.etcm  path_selector_ambiguity.etcm  spec_and_spec_ref.etcm  spec_inheritance_fragment.etcm  spec_ref_fragment.etcm  tab_indent.etcm  type_mismatch.etcm
tests/fixtures/valid/: comments_blank_lines.etcm  impl_inheritance.etcm  inline_spec.etcm  inline_spec_with_defaults.etcm  nested_literals.etcm  no_impl.etcm  spec_inheritance.etcm  spec_ref_impls.etcm
(+43 files in other folders)
