[project]
name = "etcm"
version = "0.1.0"
description = "Typed Configuration Markup for reproducible typed config graphs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["configuration", "typed-configuration", "pydantic", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "lark>=1.3",
    "pydantic>=2.13",
]

[project.scripts]
etcm = "etcm.cli:main"

[project.optional-dependencies]
dev = [
    "basedpyright",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etcm"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src/etcm",
    "/examples",
    "/docs/install.md",
    "/docs/cli.md",
    "/docs/manifest.md",
    "/docs/product_spec.md",
    "/docs/roadmap.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportUndefinedVariable = "error"
reportInvalidTypeForm = "error"
